discussion/kv_engine/179778/179778_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46740: Remove OutstandingItemsResult::diskCheckpointState

And use the HCS that is already present in
OutstandingItemsResult::ranges.

Change-Id: I6a0588b46e01a9a3ae367386cd2003b39192cf3f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-09 08:50:28.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-09 08:52:30.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49190/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49190/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41348/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41348/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9920/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9920/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10017/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10017/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21523/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21523/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23291/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23291/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23291/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22184/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22184/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22541/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22541/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30579/ : ABORTED

Compile error at [2022-09-09T08:52:11.085Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60:
error: expected ";" after expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30579/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30579/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19434/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/active_stream.cc b/engines/ep/src/dcp/active_stream.cc
index f6413aff5..617fb8579 100644
--- a/engines/ep/src/dcp/active_stream.cc
+++ b/engines/ep/src/dcp/active_stream.cc
@@ -1286,12 +1286,12 @@ void ActiveStream::processItems(
         }
 
         if (!mutations.empty()) {
-            Expects(!outstandingItemsResult.ranges.empty())
-            snapshot(outstandingItemsResult.checkpointType,
-                     mutations,
-                     outstandingItemsResult.ranges.begin()-&gt;highCompletedSeqno,
-                     visibleSeqno,
-                     highNonVisibleSeqno);
+            Expects(!outstandingItemsResult.ranges.empty()) snapshot(
+                    outstandingItemsResult.checkpointType,
+                    mutations,
+                    outstandingItemsResult.ranges.begin()-&gt;highCompletedSeqno,
+                    visibleSeqno,
+                    highNonVisibleSeqno);
         } else if (isSeqnoAdvancedEnabled()) {
             // Note that we cannot enter this case if supportSyncReplication()
             // returns true (see isSeqnoAdvancedEnabled). This means that we

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19434/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20213/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60: error: expected ";" after expression [clang-diagnostic-error]
            Expects(!outstandingItemsResult.ranges.empty())
                                                           ^
                                                           ;

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20213/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:1289:60:
error: expected ";" after expression [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20213/ )
----------------------------------------------------------------------------------------------------------------------
